--- a/index.html
+++ b/index.html
@@ -10,10 +10,40 @@
     <body>
         <div id="piggyBackground"class="jumbotron text-center">
             <div id="mainDiv">
-                <h1 class="header">Great first Header</h1>
+                <h1 class="header"style = "background-color: blueviolet;color:white;">IT'S BB DAY!!!</h1>
+                <p>A Day to Celebrate the LOVE We Share With Each Other</p>
                 <img class="pic"style="transform:rotate(90deg)"src="resources/nashevilleKiss.JPG" alt="oopsies">
-                <h1 class="header">Header for second Pic</h1>
-                <p>Description of something</p>
+                <h1 class="header"></h1>
+                <p>(    and with ham ;)     )</p>
+                <img class="pic" style="width: 80%;" src="resources/hamNRosie.JPG" alt="oopsies">
+                <p>( +rest of the fam )</p>
+                <img class="pic"style="transform:rotate(90deg)"src="resources/familypic.JPG" alt="oopsies">
+                <h1 class="header">Let's Celebrate The GREAT Times We've Had</h1>
+                <img class="pic"src="resources/bravesGame.JPG" alt="oopsies">
+                <img class="pic"src="resources/firstOctoberfest.JPG" alt="oopsies">
+                <img class="pic"src="resources/terrapin.png" alt="oopsies">
+                <h1 class="header">And The Great Times We Continue To Have</h1>
+                <img class="pic"src="resources/ivyPic.png" alt="oopsies">
+                <img class="pic"src="resources/octoberfest2.JPG" alt="oopsies">
+                <img class="pic"src="resources/weddingPic.JPG" alt="oopsies">
+                <h1 class="header">Let's Promise to Love Each Other In New And Exciting Places</h1>
+                <img class="pic"src="resources/loveTrip.jpg" alt="oopsies">
+                <img class="pic"src="resources/winery.jpg" alt="oopsies">
+                <img class="pic"style="transform:rotate(90deg)"src="resources/hiking.jpg" alt="oopsies">
+                <h1 class="header">I Promise To Continue To Be The Best Boyfriend Photographer</h1>
+                <img class="pic"src="resources/blossomFestival.jpg" alt="oopsies">
+                <img class="pic"src="resources/foxHeadshot.jpg" alt="oopsies">
+                <img class="pic"src="resources/sweetwater.jpg" alt="oopsies">
+                <h1 class="header">As Long As You Promise To Continue To Be Candid AF</h1>
+                <img class="pic"src="resources/boyClothes.jpg" alt="oopsies">
+                <img class="pic"src="resources/greatDancing.jpg" alt="oopsies">
+                <img class="pic"src="resources/superman.jpg" alt="oopsies">
+                <p>I LOVE YOU ROSIE</p>
+                <img class="pic"src="resources/weddingKiss.jpg" alt="oopsies">
+                <p>I Can't Wait To See You Later</p>
+                <img class="pic"src="resources/kissAthens.jpg" alt="oopsies">
+                <p>I Hope You Can't Wait To See Me!</p>
+                <img class="pic"src="resources/bear.jpg" alt="oopsies">
             </div>
         </div>
     </body>
