--- a/index.html
+++ b/index.html
@@ -12,20 +12,20 @@
             <div id="mainDiv">
                 <h1 class="header"style = "background-color: blueviolet;color:white;">IT'S BB DAY!!!</h1>
                 <p>A Day to Celebrate the LOVE We Share With Each Other</p>
-                <img class="pic"style="transform:rotate(90deg)"src="resources/nashevilleKiss.JPG" alt="oopsies">
+                <img class="pic"style="transform:rotate(90deg)"src="resources/nashevilleKiss.jpg" alt="oopsies">
                 <h1 class="header"></h1>
                 <p>(    and with ham ;)     )</p>
-                <img class="pic" style="width: 80%;" src="resources/hamNRosie.JPG" alt="oopsies">
+                <img class="pic" style="width: 80%;" src="resources/hamNRosie.jpg" alt="oopsies">
                 <p>( +rest of the fam )</p>
-                <img class="pic"style="transform:rotate(90deg)"src="resources/familypic.JPG" alt="oopsies">
+                <img class="pic"style="transform:rotate(90deg)"src="resources/familypic.jpg" alt="oopsies">
                 <h1 class="header">Let's Celebrate The GREAT Times We've Had</h1>
-                <img class="pic"src="resources/bravesGame.JPG" alt="oopsies">
-                <img class="pic"src="resources/firstOctoberfest.JPG" alt="oopsies">
+                <img class="pic"src="resources/bravesGame.jpg" alt="oopsies">
+                <img class="pic"src="resources/firstOctoberfest.jpg" alt="oopsies">
                 <img class="pic"src="resources/terrapin.png" alt="oopsies">
                 <h1 class="header">And The Great Times We Continue To Have</h1>
                 <img class="pic"src="resources/ivyPic.png" alt="oopsies">
-                <img class="pic"src="resources/octoberfest2.JPG" alt="oopsies">
-                <img class="pic"src="resources/weddingPic.JPG" alt="oopsies">
+                <img class="pic"src="resources/octoberfest2.jpg" alt="oopsies">
+                <img class="pic"src="resources/weddingPic.jpg" alt="oopsies">
                 <h1 class="header">Let's Promise to Love Each Other In New And Exciting Places</h1>
                 <img class="pic"src="resources/loveTrip.jpg" alt="oopsies">
                 <img class="pic"src="resources/winery.jpg" alt="oopsies">
