mixed uppercase jpeg

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <div id="mainDiv">
                 <h1 class="header"style = "background-color: blueviolet;color:white;">IT'S BB DAY!!!</h1>
                 <p>A Day to Celebrate the LOVE We Share With Each Other</p>
-                <img class="pic"style="transform:rotate(90deg)"src="resources/nashevilleKiss.jpg" alt="oopsies">
+                <img class="pic"style="transform:rotate(90deg)"src="resources/nashevilleKiss.JPG" alt="oopsies">
                 <h1 class="header"></h1>
                 <p>(    and with ham ;)     )</p>
                 <img class="pic" style="width: 80%;" src="resources/hamNRosie.jpg" alt="oopsies">
@@ -29,7 +29,7 @@
                 <h1 class="header">Let's Promise to Love Each Other In New And Exciting Places</h1>
                 <img class="pic"src="resources/loveTrip.jpg" alt="oopsies">
                 <img class="pic"src="resources/winery.jpg" alt="oopsies">
-                <img class="pic"style="transform:rotate(90deg)"src="resources/hiking.jpg" alt="oopsies">
+                <img class="pic"style="transform:rotate(90deg)"src="resources/hiking.JPG" alt="oopsies">
                 <h1 class="header">I Promise To Continue To Be The Best Boyfriend Photographer</h1>
                 <img class="pic"src="resources/blossomFestival.jpg" alt="oopsies">
                 <img class="pic"src="resources/foxHeadshot.jpg" alt="oopsies">
